# Hospital-Management-System

./: .gitignore  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
hospitalmanagement/: admin.py  apps.py  models.py  views.py
hospitalmanagement/migrations/: 0001_initial.py  0002_appointment_prescription.py  0003_remove_appointment_date_time_appointment_date_and_more.py  0004_appointment_symptoms_alter_doctor_specialization.py  0005_alter_appointment_status.py  0006_alter_appointment_status.py  0007_appointment_medications_delete_prescription.py
templates/hospitalmanagement/: admin_doctor_patient_card.html  appointment_view.html  book_appointment.html  doctor_base.html  doctor_dashboard.html  doctor_edit_appointment.html  doctor_login.html  doctor_patient.html  doctor_register.html  doctor_view_appointment.html  doctor_view_patient.html  footer.html  homebase.html  index.html  navbar.html  patient_base.html  patient_dashboard.html  patient_dashboard_cards.html  patient_login.html  patient_profile_update.html  patient_register.html  patient_reschedule_appointment.html  patient_view_appointment.html
