[tool.poetry]
name = "hospitalmanagementsystem"
version = "0.1.0"
description = ""
authors = ["vamshirr <vamshi.r@comakeit.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.0.1"
djangorestframework = "^3.14.0"
pytz = "^2023.3.post1"
pymongo = "3.12.1"
djongo = "^1.3.6"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
